--- a/eProject/StyleSheet/User/LeftMenu.css
+++ b/eProject/StyleSheet/User/LeftMenu.css
@@ -4,40 +4,22 @@
 #LeftMenuWrap
 {
     padding: 5px;
-    background-color: Purple;
 }
 
 #LeftMenuWrap .Item
 {
-    margin-bottom: 10px;
-    height: 40px;
+    
     
 }
 
-#LeftMenuWrap .Link
+#LeftMenuWrap .Link a
 {
-    height: 30px;
-    width: 120px;
-    padding: 5px;
-    float: left;
-    background-color: White;
-    -webkit-transition: width 1s;
-    box-shadow: 1px 1px 1px 1px black;
+    text-decoration: none;
+    color: Green;
+    font-size: 20px;
 }
 
-#LeftMenuWrap .Triangular
+#LeftMenuWrap .Link a:hover
 {
-    float: left;
-    width: 0px;
-    height: 34px;
-    border: 3px solid transparent;
-    border-left: 3px solid #CC3300;
-    box-shadow: 1px 1px 1px 1px black inset;
+    text-decoration: underline;
 }
-
-#LeftMenuWrap .Link:hover
-{
-    width: 150px;
-}
-
-
