--- a/eProject/MasterPage/Admin.Master
+++ b/eProject/MasterPage/Admin.Master
@@ -1,5 +1,9 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Normal.master.cs" Inherits="eProject.MasterPage.Normal" %>
 
+<%@ Register Src="../UserControl/Header.ascx" TagName="Header" TagPrefix="uc1" %>
+<%@ Register Src="../UserControl/Footer.ascx" TagName="Footer" TagPrefix="uc3" %>
+<%@ Register Src="../UserControl/Admin/LeftMenuAdmin.ascx" TagName="LeftMenuAdmin"
+    TagPrefix="uc2" %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id="Head1" runat="server">
@@ -14,17 +18,17 @@
     </asp:ScriptManager>
     <div id="wraper">
         <div id="header">
-        header
+            <uc1:Header ID="Header1" runat="server" />
         </div>
         <div id="leftNav">
-        left nav
+            <uc2:LeftMenuAdmin ID="LeftMenuAdmin1" runat="server" />
         </div>
-        <div id="content">
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
+                <div id="content">
+                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
         <div id="footer">
-        footer
+            <uc3:Footer ID="Footer1" runat="server" />
         </div>
     </div>
     </form>
