--- a/eProject/MasterPage/Normal.Master
+++ b/eProject/MasterPage/Normal.Master
@@ -1,11 +1,10 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Normal.master.cs" Inherits="eProject.MasterPage.Normal" %>
 
-<%@ Register src="../UserControl/User/LeftMenu.ascx" tagname="LeftMenu" tagprefix="uc1" %>
-
-<%@ Register src="../UserControl/Account/Login.ascx" tagname="Login" tagprefix="uc2" %>
-
-<%@ Register src="../UserControl/User/ShoppingCart.ascx" tagname="ShoppingCart" tagprefix="uc4" %>
-
+<%@ Register Src="../UserControl/User/LeftMenu.ascx" TagName="LeftMenu" TagPrefix="uc1" %>
+<%@ Register Src="../UserControl/User/ShoppingCart.ascx" TagName="ShoppingCart" TagPrefix="uc4" %>
+<%@ Register Src="../UserControl/Header.ascx" TagName="Header" TagPrefix="uc3" %>
+<%@ Register src="../UserControl/Footer.ascx" tagname="Footer" tagprefix="uc5" %>
+<%@ Register src="../UserControl/User/Banner.ascx" tagname="Banner" tagprefix="uc6" %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
@@ -20,26 +19,28 @@
     </asp:ScriptManager>
     <div id="wraper">
         <div id="header">
-        header
+            <uc3:Header ID="Header1" runat="server" />
         </div>
         <div id="leftNav">
-        
-            <uc2:Login ID="Login1" runat="server" />
-        
             <uc1:LeftMenu ID="LeftMenu1" runat="server" />
-        
         </div>
-        <div id="content">
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
-        <div id="rightNav">
-            <uc4:ShoppingCart ID="ShoppingCart1" runat="server" />
-        </div>
+        <asp:UpdatePanel ID="UpdatePanel1" runat="server" UpdateMode="Conditional">
+            <ContentTemplate>
+                <div id="content">
+                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
+                <div id="rightNav">
+                    <uc4:ShoppingCart ID="ShoppingCart1" runat="server" />
+                </div>
+            </ContentTemplate>
+        </asp:UpdatePanel>
         <div id="footer">
-        footer
+            <uc5:Footer ID="Footer1" runat="server" />
         </div>
+        <uc6:Banner ID="Banner1" runat="server" />
     </div>
+    
     </form>
 </body>
 </html>
