--- a/trunk/eProject/StyleSheet/User/Layout.css
+++ b/trunk/eProject/StyleSheet/User/Layout.css
@@ -1,4 +1,4 @@
-﻿body 
+﻿body
 {
     font-family: Candara;
 }
@@ -16,7 +16,6 @@
 #header
 {
     width: 100%;
-    background-color: Aqua;
 }
 
 #leftNav
@@ -37,16 +36,22 @@
 
 #rightNav
 {
-    width: 300px;
+    width: 320px;
     float: right;
     overflow: hidden;
     font-family: Verdana;
     font-size: 12px;
+    padding: 3px;
+    padding-top: 10px;
+    top: 0px;
+    position: fixed;
+    right: 10px;
+    box-shadow: 0px 0px 4px 1px;
+    height: 150px;
 }
 
 #footer
 {
     clear: both;
     overflow: hidden;
-    background-color: Orange;
 }
